--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,10 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto:400,500,600,700&display=swap"
+      rel="stylesheet"
+    />
   </head>
 
   <body>
