--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
       href="https://fonts.googleapis.com/css?family=Roboto:400,500,600,700&display=swap"
       rel="stylesheet"
     />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
 
   <body>
