--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
       rel="stylesheet"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="shortcut icon" href="/react.png"></head>
+  <link rel="shortcut icon" href="/account-transactions/react.png"></head>
 
   <body>
     <div id="root"></div>
-  <script type="text/javascript" src="/vendor.8c54c1c8.chunk.js"></script><script type="text/javascript" src="/app.8c54c1c8.js"></script></body>
+  <script type="text/javascript" src="/account-transactions/vendor.b26cad53.chunk.js"></script><script type="text/javascript" src="/account-transactions/app.b26cad53.js"></script></body>
 </html>
