--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <title>Account Transaction</title>
+    <meta name="author" content="pleaobraga" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
@@ -11,10 +13,9 @@
       href="https://fonts.googleapis.com/css?family=Roboto:400,500,600,700&display=swap"
       rel="stylesheet"
     />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="shortcut icon" href="/account-transactions/react.png"></head>
 
   <body>
     <div id="root"></div>
-  <script type="text/javascript" src="/account-transactions/vendor.a458ff86.chunk.js"></script><script type="text/javascript" src="/account-transactions/app.a458ff86.js"></script></body>
+  <script type="text/javascript" src="/account-transactions/vendor.6c912b6d.chunk.js"></script><script type="text/javascript" src="/account-transactions/app.6c912b6d.js"></script></body>
 </html>
