Final adjusts to deploy

--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <title>Account Transaction</title>
+    <meta name="author" content="pleaobraga" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
@@ -11,7 +13,6 @@
       href="https://fonts.googleapis.com/css?family=Roboto:400,500,600,700&display=swap"
       rel="stylesheet"
     />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
 
   <body>
